Extract control factory from ContextMenuHandler